src/objects/Signup_Payments__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Signup Payments</relationshipLabel>
        <relationshipName>Signup_Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Last_Response__c</fullName>
        <label>Last Response</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sign_Up__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sign Up</label>
        <referenceTo>Sign_Up__c</referenceTo>
        <relationshipLabel>Signup Payments</relationshipLabel>
        <relationshipName>Signup_Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Signup Payment</label>
    <nameField>
        <label>Signup Invoice Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Signup Payments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>